--- a/escorts_directory/Views/Home/index.cshtml
+++ b/escorts_directory/Views/Home/index.cshtml
@@ -14,26 +14,24 @@
                 {
                     <div class="modelPhoto photoWith_review largeHeight">
                         <figure class="modelPhoto-image-container">
-                            <a asp-action="model_profile" asp-route-id="@escort.Id" class="modelPhoto-image">
-                                <img src="@Url.Content($"/images/Profiles/{escort.Name}/{escort.Name}_{escort.Id}_1.png")"
-                                     onerror="this.onerror=null; this.src='@Url.Content("/images/no-image.jpg")';"
-                                     alt="@escort.Name" />
+                            <a asp-action="model_profile" asp-route-id="@escort.Escort.Id" class="modelPhoto-image">
+                                <img src="@escort.PhotoUrl" alt="@escort.Escort.Name" />
                             </a>
                         </figure>
                         <div class="modelPhoto-details desctionText_hide">
                             <div class="modelTitle_Style vignetColor">
-                                <p>@escort.LocationCity</p>
-                                <h2><span>@escort.Name</span></h2>
+                                <p>@escort.Escort.LocationCity</p>
+                                <h2><span>@escort.Escort.Name</span></h2>
                                 <div class="model_sortBiography_lists">
                                     <ul>
-                                        <li>Age: @escort.Age</li>
-                                        <li>Height: @escort.HeightCm cm</li>
-                                        <li>Body type: @escort.BustType</li>
-                                        <li>Bust: @escort.BustSize</li>
-                                        <li>Hair colour: @escort.HairColor</li>
-                                        <li>Eye colour: @escort.Eyes</li>
+                                        <li>Age: @escort.Escort.Age</li>
+                                        <li>Height: @escort.Escort.HeightCm cm</li>
+                                        <li>Body type: @escort.Escort.BustType</li>
+                                        <li>Bust: @escort.Escort.BustSize</li>
+                                        <li>Hair colour: @escort.Escort.HairColor</li>
+                                        <li>Eye colour: @escort.Escort.Eyes</li>
                                     </ul>
-                                    <a asp-action="model_profile" asp-route-id="@escort.Id">Profile</a>
+                                    <a asp-action="model_profile" asp-route-id="@escort.Escort.Id">Profile</a>
                                 </div>
                             </div>
                         </div>
@@ -51,26 +49,24 @@
                 {
                     <div class="modelPhoto photoWith_review largeHeight">
                         <figure class="modelPhoto-image-container">
-                            <a asp-action="model_profile" asp-route-id="@escort.Id" class="modelPhoto-image">
-                                <img src="@Url.Content($"/images/Profiles/{escort.Name}/{escort.Name}_{escort.Id}_1.png")"
-                                     onerror="this.onerror=null; this.src='@Url.Content("/images/no-image.jpg")';"
-                                     alt="@escort.Name" />
+                            <a asp-action="model_profile" asp-route-id="@escort.Escort.Id" class="modelPhoto-image">
+                                <img src="@escort.PhotoUrl" alt="@escort.Escort.Name" />
                             </a>
                         </figure>
                         <div class="modelPhoto-details desctionText_hide">
                             <div class="modelTitle_Style vignetColor">
-                                <p>@escort.LocationCity</p>
-                                <h2><span>@escort.Name</span></h2>
+                                <p>@escort.Escort.LocationCity</p>
+                                <h2><span>@escort.Escort.Name</span></h2>
                                 <div class="model_sortBiography_lists">
                                     <ul>
-                                        <li>Age: @escort.Age</li>
-                                        <li>Height: @escort.HeightCm cm</li>
-                                        <li>Body type: @escort.BustType</li>
-                                        <li>Bust: @escort.BustSize</li>
-                                        <li>Hair colour: @escort.HairColor</li>
-                                        <li>Eye colour: @escort.Eyes</li>
+                                        <li>Age: @escort.Escort.Age</li>
+                                        <li>Height: @escort.Escort.HeightCm cm</li>
+                                        <li>Body type: @escort.Escort.BustType</li>
+                                        <li>Bust: @escort.Escort.BustSize</li>
+                                        <li>Hair colour: @escort.Escort.HairColor</li>
+                                        <li>Eye colour: @escort.Escort.Eyes</li>
                                     </ul>
-                                    <a asp-action="model_profile" asp-route-id="@escort.Id">Profile</a>
+                                    <a asp-action="model_profile" asp-route-id="@escort.Escort.Id">Profile</a>
                                 </div>
                             </div>
                         </div>
