--- a/escorts_directory/Views/Shared/_Header.cshtml
+++ b/escorts_directory/Views/Shared/_Header.cshtml
@@ -5,7 +5,7 @@
 		<div class="container">
 			<div class="nav_combo_block comboNavigation_BottomCenter">
 				<!--Brand Logo-->
-				<div class="Header_logo"><a asp-action="index"><img src="~/img/main_logo.png" alt="" title="" /></a></div>
+				<div class="Header_logo"><a asp-controller="Home" asp-action="index"><img src="~/img/main_logo.png" alt="" title="" /></a></div>
 
 				<partial name="_Nav" />
 			</div>
