--- a/escorts_directory/Views/Shared/_Nav.cshtml
+++ b/escorts_directory/Views/Shared/_Nav.cshtml
@@ -97,7 +97,7 @@
 						<li><a href="#">Georgia</a></li>
 					</ul>
 				</li>
-				<li><a asp-action="about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
+				<li><a asp-controller="Home" asp-action="about_us"><i class="fa fa-heart"></i><span>ABOUT US</span></a></li>
 				<li class="dropdown has-mega-menu">
 					<a href="javascript:void(0)"><i class="fa fa-search"></i><span>SEARCH</span></a>
 					<div class="mega-menu search-panel" data-width="1110px">
@@ -110,7 +110,7 @@
 						</div>
 					</div>
 				</li>
-				<li><a href="category_page.html"><i class="fa fa-user"></i><span>MEMBERS</span></a></li>
+                <li><a href="#"><i class="fa fa-user"></i><span>MEMBERS</span></a></li>
 			</ul>
 		</div>
 	</nav>
