--- a/escorts_directory/Views/Home/model_profile.cshtml
+++ b/escorts_directory/Views/Home/model_profile.cshtml
@@ -13,10 +13,8 @@
     <div class="container">
         <h1>VIP Escorts</h1>
         <div class="breadcum_block">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">VIP Escorts</li>
-            </ol>
+            @await Html.PartialAsync("_BreadcrumbsPartial", (List<BreadcrumbItem>)ViewBag.Breadcrumbs)
+
         </div>
     </div>
     <div class="sliderBanner_Overlay"></div>
